SERVER-14753 fix leak of backup query solution